src/app/globals.css
@import "tailwindcss";

:root {
  --primary: #0057d4;

  --bg-black: #0c0c0c;
  --bg-white: #f0f0f0;

  --text-1: #070707;
  --text-2: #393a39;

  --gray-1: #dcdcdc;
  --gray-2: #a5a5a5;
  --gray-3: #787878;
}

@theme inline {
  --color-primary: var(--primary);

  --color-bg-black: var(--bg-black);
  --color-bg-white: var(--bg-white);

  --color-text-1: var(--text-1);
  --color-text-2: var(--text-2);

  --color-gray-1: var(--gray-1);
  --color-gray-2: var(--gray-2);
  --color-gray-3: var(--gray-3);

  --animate-aurora: aurora 50s linear infinite;

  @keyframes aurora {
    from {
      background-position:
        -50% -50%,
        -50% -50%;
    }
    to {
      background-position:
        -350% -50%,
        -350% -50%;
    }
  }
}

*::selection {
  @apply bg-primary text-white;
}

.text-class-one,
.text-class-two {
  color: #393a39;
}

.text-class-two {
  position: absolute;
}

html {
  text-align: left;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  font-size: calc(10 * 100vw / 1440);
  font-family: "SF Pro", sans-serif;
  scroll-behavior: smooth;
}

@media (orientation: portrait) {
  html {
    font-size: calc(10 * 100vw / 600);
  }
}

body {
  overflow-x: hidden;
  overflow-y: hidden;
  font-size: 1.6rem;
}

body.overflow-hidden {
  overflow: hidden;
  scroll-behavior: initial !important;
}

/* Sticky card styles */
.sticky-content {
  width: 100%;
  position: sticky;
  top: 0;
  --offset: 0px;
  top: var(--offset);
  min-height: max-content;
  height: calc(50vw - var(--offset));
}

/* Apply increasing offset for each next card */
.sticky-content:nth-child(1) {
  --offset: 0;
}

.sticky-content:nth-child(2) {
  --offset: 8rem;
}

.sticky-content:nth-child(3) {
  --offset: 17rem;
}

.sticky-content:nth-child(4) {
  --offset: 26rem;
}

@media screen and (orientation: portrait) {
  .sticky-content:nth-child(1) {
    --offset: 0;
  }

  .sticky-content:nth-child(2) {
    --offset: 4rem;
  }

  .sticky-content:nth-child(3) {
    --offset: 6rem;
  }

  .sticky-content:nth-child(4) {
    --offset: 8rem;
  }
}

.transition_1 {
  transition: all 0.25s cubic-bezier(0.85, 0, 0.15, 1);
}

mux-player {
  aspect-ratio: 4/3;
  --controls: none;
  --dialog: none;
  --loading-indicator: none;
  --play-button: none;
  --live-button: none;
  --seek-backward-button: none;
  --seek-forward-button: none;
  --mute-button: none;
  --captions-button: none;
  --airplay-button: none;
  --pip-button: none;
  --fullscreen-button: none;
  --cast-button: none;
  --playback-rate-button: none;
  --volume-range: none;
  --time-range: none;
  --time-display: none;
  --duration-display: none;
  --rendition-selectmenu: none;
  --center-controls: none;
  --bottom-play-button: none;
}

/* aspect ratio for ios devices with fallback*/
/* 10 / 9 */
.aspect-custom-hero-image {
  aspect-ratio: 10/9;
}

/* Fallback for browsers that do not support aspect-ratio */
@supports not (aspect-ratio: 10 / 9) {
  .aspect-custom-hero-image::before {
    float: left;
    padding-top: 90%;
    content: "";
  }
  .aspect-custom-hero-image::after {
    display: block;
    content: "";
    clear: both;
  }
}

/* 4 / 3 */
.aspect-custom-video {
  aspect-ratio: 4/3;
}

@supports not (aspect-ratio: 4 / 3) {
  .aspect-custom-video::before {
    float: left;
    padding-top: 75%;
    content: "";
  }
  .aspect-custom-video::after {
    display: block;
    content: "";
    clear: both;
  }
}

/* 1 / 1 */
.aspect-custom-square {
  aspect-ratio: 1/1;
}

@supports not (aspect-ratio: 1 / 1) {
  .aspect-custom-square::before {
    float: left;
    padding-top: 100%;
    content: "";
  }
  .aspect-custom-square::after {
    display: block;
    content: "";
    clear: both;
  }
}

